# 5model

./: README.md  index.md  main.py  main_adversarial.py  main_random.py  make_attention_map.py  pyproject.toml  test1.py  test_check.py  weight_analysis_saver.py
CLEANUP/: main_correct.py
CLEANUP/for_dataset_adversarial/: README.md
Explanation/: 01_federated_learning_simulation___data_extraction_.md  02_experiment_aggregation___dataset_construction_.md  03_feature_engineering_for_anomaly_detection_.md  04_anomaly_detection_model_training_framework_.md  05_modular_model_training___hyperparameter_optimization_.md  06_comprehensive_performance_evaluation___reporting_.md  07_ablation_study___feature_set_comparison_.md  combined.py  main.py
create_dataset/: .gitignore  GPU_UTILIZATION_README.md  README.md  combined.py  config.py  dataset_random_10pct_20250523_052539.csv  gpu_scheduler.py  main.py  run.sh  run_and_collect.py  timestamper.py
create_dataset/create_dataset_docs/: 06_dataset_aggregation_.md
create_dataset/createdataset_docs/: 01_experiment_orchestration___data_collection_.md  02_project_configuration_.md  (+4 more)
five_model_adversarial/: main_adversarial_new_model.py
five_model_random/: compare_results.py  dataset.csv  gradient_boosting_model.py  main_random_five_model.py
for_dataset/: README.md  main.py  run_and_collect.py
for_dataset_adversarial/: main_adversarial.py  run_and_collect.py
for_dataset_explanation/: 01_automated_experiment_conductor___run_and_collect_py___.md  02_federated_learning_simulation_engine_.md  03_decentralized_dataset_management___load_data___.md  04_fl_client_agent___imdbclient___.md  06_structured_results_reporting__csv_generation__.md
for_dataset_random/: main_random.py
legacy/: main_new.py  make_glaph.py  run_and_collect.py  test.py
random_forest/: main_adversarial.py  main_random.py
testing/: combined.py
(+49 files in other folders)
