[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "5model malicious entry detection"
version = "0.1.0"
description = "Hugging Face Transformers Federated Learning with Flower"
authors = [
    "The Flower Authors <hello@flower.ai>",
    "Alexander Berns <alex@alexberns.net>",
    "Micaela Hamono <micaela@micae.la>",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
flwr = {extras = ["simulation"], version = "^1.8.0"}
flwr-datasets = ">=0.0.2,<1.0.0"
torch = "^2.7.0"
transformers = ">=4.30.0,<5.0"
evaluate = ">=0.4.0,<1.0"
datasets = ">=2.0.0, <3.0"
scikit-learn = ">=1.3.1, <2.0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
pandas = "^2.2.3"
xgboost = "^2.1.2"
imbalanced-learn = "^0.12.4"

[tool.poetry.group.dev.dependencies]
