[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["5model"]

[project]
name = "5model"
version = "0.1.0"
description = "Using 5 models to detect malicious entries (Hugging Face Transformers Federated Learning with Flower)"
authors = [
    { name = "The Flower Authors", email = "hello@flower.ai" },
    { name = "Alexander Berns", email = "alex@alexberns.net" },
    { name = "Micaela Hamono", email = "micaela@micae.la" },
]
requires-python = ">=3.9,<3.11"
dependencies = [
    "flwr[simulation]>=1.8.0,<2",
    "flwr-datasets>=0.0.2,<1.0.0",
    "torch>=2.7.0,<3",
    "transformers>=4.30.0,<5.0",
    "evaluate>=0.4.0,<1.0",
    "datasets>=2.0.0, <3.0",
    "scikit-learn>=1.3.1, <2.0",
    "matplotlib>=3.8.4,<4",
    "seaborn>=0.13.2,<0.14",
    "pandas>=2.2.3,<3",
    "xgboost>=2.1.2,<3",
    "imbalanced-learn>=0.12.4,<0.13",
    "shap>=0.47.2",
]

[dependency-groups]
dev = []
